# base-fastapi-project

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run.py
envs/: .env
src/: app.py
src/services/: main.py  secondary.py
src/services/db/: mongo.py  sqlite.py
src/tests/services/: test_main.py
src/tests/services/fixtures/: fastapi_client.py
