[tool.poetry]
name = "test project"
version = "0.1.0"
description = "This is a test project."
authors = ["Kyrylo"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
uvicorn = {extras = ["standard"], version = "^0.30.0"}

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.1"
ptpython = "^3.0.27"
click = "^8.1.7"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
